fix align

--- a/css/upscuits.css
+++ b/css/upscuits.css
@@ -23,9 +23,3 @@ iframe {
     height: 40px;
     width: 150px;
 }
-
-/*
-thead {
-    text-align: left;
-}
-*/
